# mlde-analysis

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.lock.yml  environment.txt  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: ci.yml  lint.yml
nbs/: pw-warwick-conf.ipynb  quantile-mapping-for-proposal.ipynb
nbs/evaluation/: ai-schematic.ipynb  ccs-annual.ipynb  ccs-domain-mean.ipynb  ccs-figures.ipynb  ccs-seasonal-domain-mean-bootstrap.ipynb  ccs-seasonal-frac-contrib-bootstraps.ipynb  ccs-seasonal-freq-distribution.ipynb  ccs-seasonal.ipynb  ccs-threshold.ipynb  conditional.ipynb  diagnostics.ipynb  distribution-diagnostics.ipynb  distribution.ipynb  eval-at-60km-pretty.ipynb  fss.ipynb  lo-data-figures.ipynb  multivariate-correlation.ipynb  multivariate-distribution.ipynb  perspective-paper-figures.ipynb  perspective-paper-samples.ipynb  pretty-figures.ipynb  raw-diffusion-predictions.ipynb  samples.ipynb  seasonal-distribution.ipynb  spread-error-variability.ipynb  structure.ipynb  uq.ipynb  variability-data-reduction-checks.ipynb
nbs/evaluation/parameters/: agu24-abstract.yml  cpmgem.yml  example.yml  exp-batch-size.yml  improving-unet.yml  md-12em-epochs-val.yml  md-12em-val-epoch-20.yml  md-1em-epochs-val.yml  md-1em-v850-epochs-val.yml  md-1em-val.yml  md-STV-12em-val.yml  md-STV-1em-val.yml  md-TV-12em-val.yml  md-TV-1em-val.yml  md-V-12em-val.yml  md-V-1em-val.yml  md-add-levels-and-temp-12em-val.yml  md-add-levels-and-temp-1em-val.yml  md-add-p-12em-val-epoch-20.yml  md-add-p-1em-val.yml  md-add-p-and-s-12em-val-epoch-20-gcm-only.yml  md-add-p-and-s-12em-val-epoch-20.yml  md-add-p-and-s-1em-val-gcm-only.yml  md-add-p-and-s-1em-val.yml  md-add-s-12em-val-epoch-20.yml  md-add-s-1em-val.yml  md-best-unet-12em.yml  md-gcm-xfm-12em-val-epoch-20.yml  md-gcm-xfm-1em-val.yml  md-imperfect-12em-val.yml  md-lsp-v850-1em-val.yml  md-pSTV-12em-val.yml  md-pSTV-1em-val.yml  md-pTV-12em-val.yml  md-pTV-1em-val.yml  md-temp-purpose-12em-val.yml  md-temp-purpose-1em-val.yml  md-v850-12em-val.yml  md-v850-1em-val.yml  mv-mv-only-val.yml  (+34 more)
nbs/evaluation/variability-focus/: Evaluation-bham-4x.ipynb  training-sampling-train-val-PslTV.ipynb
nbs/exploration/: engineered features.ipynb  md_res_and_domain.ipynb  regridded data.ipynb  split-data.ipynb  testing-data-pipeline.ipynb
nbs/exploration/datasets/: bham-4x_em01-04_psl-temp4th-vort4th_random-season.ipynb  bham-4x_em12_linpr_random-season.ipynb  bham-4x_em12_psl-sphum4th-temp4th-vort4th_random-season.ipynb  bham-4x_em12_psl-temp4th-vort4th_random-season.ipynb  bham-4x_spechum-temp-vort_random.ipynb  bham-4x_tempgrad-vort_random.ipynb  ccs-sampling-variability.ipynb  ccs-seasonal-sampling-variability.ipynb  compare-pr-at-60km.ipynb  examples.ipynb  sampling-variability.ipynb  target-variable.ipynb  target-xfm.ipynb  vort 60km-1x london.ipynb  vort 60km-4x bham.ipynb  vort gcmx-1x london.ipynb  vort gcmx-4x bham.ipynb
nbs/exploration/datasets/parameters/: bham64_ccpm-4x_12em_psl-sphum4th-temp4th-vort4th_pr-val.yml  bham64_ccpm-4x_1em_psl-sphum4th-temp4th-vort4th_pr-val.yml  target_pr-12em-test.yml  target_pr-12em-val.yml  target_pr-1em-val.yml  target_pr.yml  target_relhum150cm-test.yml  target_relhum150cm.yml  target_swbgt-test.yml  target_swbgt.yml  target_tmean150cm-test.yml  target_tmean150cm.yml
nbs/exploration/datasets/transformed/: bham64_ccpm-4x_12em_mv.ipynb
nbs/exploration/variables/: linpr.ipynb  pr.ipynb  vorticity850.ipynb
src/mlde_analysis/: __init__.py  bootstrap.py  ccs.py  data.py  default_params.py  display.py  distribution.py  examples.py  fractional_contribution.py  fss.py  mv_distribution.py  perspective_paper.py  psd.py  spatial_correlation.py  uncertainty.py  utils.py  wet_dry.py
src/mlde_notebooks/: __init__.py  default_params.py  derived_variables.py  display.py  distribution.py  examples.py  wet_dry.py
tests/: conftest.py
tests/mlde_analysis/: test_data.py  test_derived_variables.py
tests/mlde_notebooks/: test_data.py  test_derived_variables.py
