[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlde_analysis"
version = "0.5.0"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for notebooks evaluating approaches to emulate a CPM and downscale precipitation"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# [dependency-groups]
# test = ["pytest==7.3.1"]
# dev = [{include-group = "test"}]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde-analysis"
"Bug Tracker" = "https://github.com/henryaddison/mlde-analysis/issues"

[project.scripts]
    mlde-analysis = "mlde_analysis.bin:app"

[tool.pixi.workspace]
channels = ["pyviz", "conda-forge", "nodefaults"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
# dev = {features = ["dev"], solve-group = "default"}
# Create a custom environment which only has the `lint` feature
# lint = {features = ["lint"], no-default-feature = true}

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.dependencies]
_libgcc_mutex = { version = "==0.1", build = "conda_forge" }
_openmp_mutex = { version = "==4.5", build = "2_gnu" }
alsa-lib = { version = "==1.2.8", build = "h166bdaf_0" }
ansiwrap = { version = "==0.8.4", build = "py_0" }
antlr-python-runtime = { version = "==4.7.2", build = "py39hf3d152e_1003" }
anyio = { version = "==3.7.0", build = "pyhd8ed1ab_0" }
aom = { version = "==3.5.0", build = "h27087fc_0" }
argon2-cffi = { version = "==21.3.0", build = "pyhd8ed1ab_0" }
argon2-cffi-bindings = { version = "==21.2.0", build = "py39hb9d737c_3" }
asttokens = { version = "==2.2.1", build = "pyhd8ed1ab_0" }
async-lru = { version = "==2.0.2", build = "pyhd8ed1ab_0" }
attr = { version = "==2.5.1", build = "h166bdaf_1" }
attrs = { version = "==23.1.0", build = "pyh71513ae_1" }
aws-c-auth = { version = "==0.6.27", build = "he072965_1" }
aws-c-cal = { version = "==0.5.26", build = "hf677bf3_1" }
aws-c-common = { version = "==0.8.19", build = "hd590300_0" }
aws-c-compression = { version = "==0.2.16", build = "hbad4bc6_7" }
aws-c-event-stream = { version = "==0.2.20", build = "hb4b372c_7" }
aws-c-http = { version = "==0.7.7", build = "h2632f9a_4" }
aws-c-io = { version = "==0.13.21", build = "h9fef7b8_5" }
aws-c-mqtt = { version = "==0.8.11", build = "h2282364_1" }
aws-c-s3 = { version = "==0.3.0", build = "hcb5a9b2_2" }
aws-c-sdkutils = { version = "==0.1.9", build = "hbad4bc6_2" }
aws-checksums = { version = "==0.1.14", build = "hbad4bc6_7" }
aws-crt-cpp = { version = "==0.20.2", build = "he0fdcb3_0" }
aws-sdk-cpp = { version = "==1.10.57", build = "h059227d_13" }
babel = { version = "==2.12.1", build = "pyhd8ed1ab_1" }
backcall = { version = "==0.2.0", build = "pyh9f0ad1d_0" }
backports = { version = "==1.0", build = "pyhd8ed1ab_3" }
"backports.functools_lru_cache" = { version = "==1.6.4", build = "pyhd8ed1ab_0" }
beautifulsoup4 = { version = "==4.12.2", build = "pyha770c72_0" }
black = { version = "==22.10.0", build = "py39hf3d152e_2" }
bleach = { version = "==6.0.0", build = "pyhd8ed1ab_0" }
blosc = { version = "==1.21.4", build = "h0f2a231_0" }
bokeh = { version = "==3.1.1", build = "pyhd8ed1ab_0" }
bottleneck = { version = "==1.3.7", build = "py39h389d5f1_0" }
brotli = { version = "==1.0.9", build = "h166bdaf_8" }
brotli-bin = { version = "==1.0.9", build = "h166bdaf_8" }
bzip2 = { version = "==1.0.8", build = "h7f98852_4" }
c-ares = { version = "==1.19.1", build = "hd590300_0" }
ca-certificates = { version = "==2024.8.30", build = "hbcca054_0" }
cairo = { version = "==1.16.0", build = "hbbf8b49_1016" }
cartopy = { version = "==0.21.1", build = "py39h4bd5d67_1" }
cdo = { version = "==2.2.0", build = "h5116a0c_3" }
certifi = { version = "==2024.8.30", build = "pyhd8ed1ab_0" }
cf-units = { version = "==3.2.0", build = "py39h0f8d45d_0" }
cffi = { version = "==1.15.1", build = "py39he91dace_3" }
cftime = { version = "==1.6.2", build = "py39h2ae25f5_1" }
charset-normalizer = { version = "==3.1.0", build = "pyhd8ed1ab_0" }
click = { version = "==8.1.3", build = "unix_pyhd8ed1ab_2" }
cloudpickle = { version = "==2.2.1", build = "pyhd8ed1ab_0" }
colorama = { version = "==0.4.6", build = "pyhd8ed1ab_0" }
colorcet = { version = "==3.0.1", build = "py_0" }
comm = { version = "==0.1.3", build = "pyhd8ed1ab_0" }
contourpy = { version = "==1.0.7", build = "py39h4b4f3f3_0" }
curl = { version = "==8.1.2", build = "h409715c_0" }
cycler = { version = "==0.11.0", build = "pyhd8ed1ab_0" }
cytoolz = { version = "==0.12.0", build = "py39hb9d737c_1" }
dart-sass = { version = "==1.58.3", build = "ha770c72_1" }
dask = { version = "==2023.5.1", build = "pyhd8ed1ab_0" }
dask-core = { version = "==2023.5.1", build = "pyhd8ed1ab_0" }
datashader = { version = "==0.15.0", build = "py_0" }
datashape = { version = "==0.5.4", build = "py_1" }
dav1d = { version = "==1.2.0", build = "hd590300_0" }
dbus = { version = "==1.13.6", build = "h5008d03_3" }
debugpy = { version = "==1.6.7", build = "py39h227be39_0" }
decorator = { version = "==5.1.1", build = "pyhd8ed1ab_0" }
defusedxml = { version = "==0.7.1", build = "pyhd8ed1ab_0" }
deno = { version = "==1.28.2", build = "h2f28480_0" }
deno-dom = { version = "==0.1.35", build = "hd9586b0_1" }
distributed = { version = "==2023.5.1", build = "pyhd8ed1ab_0" }
eccodes = { version = "==2.30.0", build = "h95353b9_0" }
entrypoints = { version = "==0.4", build = "pyhd8ed1ab_0" }
esbuild = { version = "==0.15.5", build = "ha770c72_1" }
executing = { version = "==1.2.0", build = "pyhd8ed1ab_0" }
expat = { version = "==2.5.0", build = "hcb278e6_1" }
ffmpeg = { version = "==5.1.2", build = "gpl_hb250762_110" }
fftw = { version = "==3.3.10", build = "nompi_hc118613_107" }
findlibs = { version = "==0.0.5", build = "pyhd8ed1ab_0" }
flake8 = { version = "==6.0.0", build = "pyhd8ed1ab_0" }
flit-core = { version = "==3.9.0", build = "pyhd8ed1ab_0" }
font-ttf-dejavu-sans-mono = { version = "==2.37", build = "hab24e00_0" }
font-ttf-inconsolata = { version = "==3.0", build = "h77eed37_0" }
font-ttf-source-code-pro = { version = "==2.38", build = "h77eed37_0" }
font-ttf-ubuntu = { version = "==0.83", build = "hab24e00_0" }
fontconfig = { version = "==2.14.2", build = "h14ed4e7_0" }
fonts-conda-ecosystem = { version = "==1", build = "0" }
fonts-conda-forge = { version = "==1", build = "0" }
fonttools = { version = "==4.39.4", build = "py39hd1e30aa_0" }
freeglut = { version = "==3.2.2", build = "hac7e632_2" }
freetype = { version = "==2.12.1", build = "hca18f0e_1" }
fribidi = { version = "==1.0.10", build = "h36c2ea0_0" }
fsspec = { version = "==2023.5.0", build = "pyh1a96a4e_0" }
geopandas-base = { version = "==0.13.2", build = "pyha770c72_1" }
geos = { version = "==3.11.2", build = "hcb278e6_0" }
geoviews = { version = "==1.10.0", build = "py_0" }
geoviews-core = { version = "==1.10.0", build = "py_0" }
gettext = { version = "==0.21.1", build = "h27087fc_0" }
gflags = { version = "==2.2.2", build = "he1b5a44_1004" }
glib = { version = "==2.76.3", build = "hfc55251_0" }
glib-tools = { version = "==2.76.3", build = "hfc55251_0" }
glog = { version = "==0.6.0", build = "h6f12383_0" }
gmp = { version = "==6.2.1", build = "h58526e2_0" }
gnutls = { version = "==3.7.8", build = "hf3e180e_0" }
graphite2 = { version = "==1.3.13", build = "h58526e2_1001" }
gst-plugins-base = { version = "==1.22.3", build = "h938bd60_1" }
gstreamer = { version = "==1.22.3", build = "h977cf35_1" }
harfbuzz = { version = "==7.3.0", build = "hdb3a94d_0" }
hdf4 = { version = "==4.2.15", build = "h501b40f_6" }
hdf5 = { version = "==1.14.0", build = "nompi_hb72d44e_103" }
holoviews = { version = "==1.16.2", build = "py_0" }
hvplot = { version = "==0.8.4", build = "py_0" }
icu = { version = "==72.1", build = "hcb278e6_0" }
idna = { version = "==3.4", build = "pyhd8ed1ab_0" }
importlib-metadata = { version = "==6.6.0", build = "pyha770c72_0" }
importlib-resources = { version = "==5.12.0", build = "pyhd8ed1ab_0" }
importlib_metadata = { version = "==6.6.0", build = "hd8ed1ab_0" }
importlib_resources = { version = "==5.12.0", build = "pyhd8ed1ab_0" }
iniconfig = { version = "==2.0.0", build = "pyhd8ed1ab_0" }
ipykernel = { version = "==6.23.1", build = "pyh210e3f2_0" }
ipython = { version = "==8.13.2", build = "pyh41d4057_0" }
ipython_genutils = { version = "==0.2.0", build = "py_1" }
ipywidgets = { version = "==8.0.6", build = "pyhd8ed1ab_0" }
iris = { version = "==3.6.0", build = "pyha770c72_0" }
jasper = { version = "==4.0.0", build = "h32699f2_1" }
jedi = { version = "==0.18.2", build = "pyhd8ed1ab_0" }
jinja2 = { version = "==3.1.2", build = "pyhd8ed1ab_1" }
joblib = { version = "==1.2.0", build = "pyhd8ed1ab_0" }
jsmin = { version = "==3.0.1", build = "pyhd8ed1ab_0" }
json5 = { version = "==0.9.5", build = "pyh9f0ad1d_0" }
jsonschema = { version = "==4.17.3", build = "pyhd8ed1ab_0" }
jupyter = { version = "==1.0.0", build = "py39hf3d152e_8" }
jupyter-lsp = { version = "==2.1.0", build = "pyhd8ed1ab_0" }
jupyter_client = { version = "==8.2.0", build = "pyhd8ed1ab_0" }
jupyter_console = { version = "==6.6.3", build = "pyhd8ed1ab_0" }
jupyter_core = { version = "==5.3.0", build = "py39hf3d152e_0" }
jupyter_events = { version = "==0.6.3", build = "pyhd8ed1ab_0" }
jupyter_server = { version = "==2.6.0", build = "pyhd8ed1ab_0" }
jupyter_server_terminals = { version = "==0.4.4", build = "pyhd8ed1ab_1" }
jupyterlab = { version = "==4.0.2", build = "pyhd8ed1ab_0" }
jupyterlab_pygments = { version = "==0.2.2", build = "pyhd8ed1ab_0" }
jupyterlab_server = { version = "==2.22.1", build = "pyhd8ed1ab_0" }
jupyterlab_widgets = { version = "==3.0.7", build = "pyhd8ed1ab_1" }
keyutils = { version = "==1.6.1", build = "h166bdaf_0" }
kiwisolver = { version = "==1.4.4", build = "py39hf939315_1" }
krb5 = { version = "==1.20.1", build = "h81ceb04_0" }
lame = { version = "==3.100", build = "h166bdaf_1003" }
lcms2 = { version = "==2.15", build = "haa2dc70_1" }
ld_impl_linux-64 = { version = "==2.40", build = "h41732ed_0" }
lerc = { version = "==4.0.0", build = "h27087fc_0" }
libabseil = { version = "==20230125.2", build = "cxx17_h59595ed_2" }
libaec = { version = "==1.0.6", build = "hcb278e6_1" }
libarrow = { version = "==12.0.0", build = "h96638e8_3_cpu" }
libass = { version = "==0.17.1", build = "hc9aadba_0" }
libblas = { version = "==3.9.0", build = "16_linux64_openblas" }
libbrotlicommon = { version = "==1.0.9", build = "h166bdaf_8" }
libbrotlidec = { version = "==1.0.9", build = "h166bdaf_8" }
libbrotlienc = { version = "==1.0.9", build = "h166bdaf_8" }
libcap = { version = "==2.67", build = "he9d0100_0" }
libcblas = { version = "==3.9.0", build = "16_linux64_openblas" }
libclang = { version = "==16.0.4", build = "default_h1cdf331_0" }
libclang13 = { version = "==16.0.4", build = "default_h4d60ac6_0" }
libcrc32c = { version = "==1.1.2", build = "h9c3ff4c_0" }
libcups = { version = "==2.3.3", build = "h36d4200_3" }
libcurl = { version = "==8.1.2", build = "h409715c_0" }
libdeflate = { version = "==1.18", build = "h0b41bf4_0" }
libdrm = { version = "==2.4.114", build = "h166bdaf_0" }
libedit = { version = "==3.1.20191231", build = "he28a2e2_2" }
libev = { version = "==4.33", build = "h516909a_1" }
libevent = { version = "==2.1.12", build = "h3358134_0" }
libexpat = { version = "==2.5.0", build = "hcb278e6_1" }
libffi = { version = "==3.4.2", build = "h7f98852_5" }
libflac = { version = "==1.4.2", build = "h27087fc_0" }
libgcc = { version = "==14.2.0", build = "h77fa898_1" }
libgcc-ng = { version = "==14.2.0", build = "h69a702a_1" }
libgcrypt = { version = "==1.10.1", build = "h166bdaf_0" }
libgfortran = { version = "==14.2.0", build = "h69a702a_1" }
libgfortran-ng = { version = "==14.2.0", build = "h69a702a_1" }
libgfortran5 = { version = "==14.2.0", build = "hd5240d6_1" }
libglib = { version = "==2.76.3", build = "hebfc3b9_0" }
libglu = { version = "==9.0.0", build = "hac7e632_1002" }
libgomp = { version = "==14.2.0", build = "h77fa898_1" }
libgoogle-cloud = { version = "==2.10.1", build = "hac9eb74_1" }
libgpg-error = { version = "==1.46", build = "h620e276_0" }
libgrpc = { version = "==1.54.2", build = "hb20ce57_2" }
libiconv = { version = "==1.17", build = "h166bdaf_0" }
libidn2 = { version = "==2.3.4", build = "h166bdaf_0" }
libjpeg-turbo = { version = "==2.1.5.1", build = "h0b41bf4_0" }
liblapack = { version = "==3.9.0", build = "16_linux64_openblas" }
liblapacke = { version = "==3.9.0", build = "16_linux64_openblas" }
libllvm14 = { version = "==14.0.6", build = "hcd5def8_3" }
libllvm16 = { version = "==16.0.4", build = "h5cf9203_0" }
libnetcdf = { version = "==4.9.2", build = "nompi_h0f3d0bb_105" }
libnghttp2 = { version = "==1.52.0", build = "h61bc06f_0" }
libnsl = { version = "==2.0.0", build = "h7f98852_0" }
libnuma = { version = "==2.0.16", build = "h0b41bf4_1" }
libogg = { version = "==1.3.4", build = "h7f98852_1" }
libopenblas = { version = "==0.3.21", build = "pthreads_h78a6416_3" }
libopencv = { version = "==4.7.0", build = "py39h0cf8573_4" }
libopus = { version = "==1.3.1", build = "h7f98852_1" }
libpciaccess = { version = "==0.17", build = "h166bdaf_0" }
libpng = { version = "==1.6.39", build = "h753d276_0" }
libpq = { version = "==15.3", build = "hbcd7760_1" }
libprotobuf = { version = "==3.21.12", build = "h3eb15da_0" }
libsndfile = { version = "==1.2.0", build = "hb75c966_0" }
libsodium = { version = "==1.0.18", build = "h36c2ea0_1" }
libsqlite = { version = "==3.42.0", build = "h2797004_0" }
libssh2 = { version = "==1.10.0", build = "hf14f497_3" }
libstdcxx-ng = { version = "==12.2.0", build = "h46fd767_19" }
libsystemd0 = { version = "==253", build = "h8c4010b_1" }
libtasn1 = { version = "==4.19.0", build = "h166bdaf_0" }
libthrift = { version = "==0.18.1", build = "h8fd135c_1" }
libtiff = { version = "==4.5.0", build = "ha587672_6" }
libunistring = { version = "==0.9.10", build = "h7f98852_0" }
libutf8proc = { version = "==2.8.0", build = "h166bdaf_0" }
libuuid = { version = "==2.38.1", build = "h0b41bf4_0" }
libuv = { version = "==1.44.2", build = "h166bdaf_0" }
libva = { version = "==2.18.0", build = "h0b41bf4_0" }
libvorbis = { version = "==1.3.7", build = "h9c3ff4c_0" }
libvpx = { version = "==1.13.0", build = "hcb278e6_0" }
libwebp-base = { version = "==1.3.0", build = "h0b41bf4_0" }
libxcb = { version = "==1.15", build = "h0b41bf4_0" }
libxkbcommon = { version = "==1.5.0", build = "h5d7e998_3" }
libxml2 = { version = "==2.11.4", build = "h0d562d8_0" }
libzip = { version = "==1.9.2", build = "hc929e4a_1" }
libzlib = { version = "==1.2.13", build = "h166bdaf_4" }
linkify-it-py = { version = "==2.0.0", build = "pyhd8ed1ab_0" }
llvmlite = { version = "==0.40.1", build = "py39h174d805_0" }
locket = { version = "==1.0.0", build = "pyhd8ed1ab_0" }
lz4 = { version = "==4.3.2", build = "py39h724f13c_0" }
lz4-c = { version = "==1.9.4", build = "hcb278e6_0" }
magics = { version = "==4.13.0", build = "h8ea9e15_4" }
magics-python = { version = "==1.5.8", build = "pyhd8ed1ab_1" }
markdown = { version = "==3.4.3", build = "pyhd8ed1ab_0" }
markdown-it-py = { version = "==2.2.0", build = "pyhd8ed1ab_0" }
markupsafe = { version = "==2.1.2", build = "py39h72bdee0_0" }
matplotlib = { version = "==3.7.1", build = "py39hf3d152e_0" }
matplotlib-base = { version = "==3.7.1", build = "py39he190548_0" }
matplotlib-inline = { version = "==0.1.6", build = "pyhd8ed1ab_0" }
mccabe = { version = "==0.7.0", build = "pyhd8ed1ab_0" }
mdit-py-plugins = { version = "==0.4.0", build = "pyhd8ed1ab_0" }
mdurl = { version = "==0.1.0", build = "pyhd8ed1ab_0" }
metpy = { version = "==1.5.0", build = "pyhd8ed1ab_0" }
mistune = { version = "==2.0.5", build = "pyhd8ed1ab_0" }
mpg123 = { version = "==1.31.3", build = "hcb278e6_0" }
msgpack-python = { version = "==1.0.5", build = "py39h4b4f3f3_0" }
multipledispatch = { version = "==0.6.0", build = "py_0" }
munkres = { version = "==1.1.4", build = "pyh9f0ad1d_0" }
mypy_extensions = { version = "==1.0.0", build = "pyha770c72_0" }
mysql-common = { version = "==8.0.32", build = "hf1915f5_2" }
mysql-libs = { version = "==8.0.32", build = "hca2cd23_2" }
nbclassic = { version = "==1.0.0", build = "pyhb4ecaf3_1" }
nbclient = { version = "==0.8.0", build = "pyhd8ed1ab_0" }
nbconvert = { version = "==7.2.9", build = "pyhd8ed1ab_0" }
nbconvert-core = { version = "==7.2.9", build = "pyhd8ed1ab_0" }
nbconvert-pandoc = { version = "==7.2.9", build = "pyhd8ed1ab_0" }
nbformat = { version = "==5.8.0", build = "pyhd8ed1ab_0" }
nc-time-axis = { version = "==1.4.1", build = "pyhd8ed1ab_0" }
ncurses = { version = "==6.3", build = "h27087fc_1" }
nest-asyncio = { version = "==1.5.6", build = "pyhd8ed1ab_0" }
nettle = { version = "==3.8.1", build = "hc379101_1" }
nodejs = { version = "==18.16.1", build = "hf52ce11_0" }
notebook = { version = "==6.5.4", build = "pyha770c72_0" }
notebook-shim = { version = "==0.2.3", build = "pyhd8ed1ab_0" }
nspr = { version = "==4.35", build = "h27087fc_0" }
nss = { version = "==3.89", build = "he45b914_0" }
numba = { version = "==0.57.1", build = "py39hb75a051_0" }
numpy = { version = "==1.23.4", build = "py39h3d75532_1" }
opencv = { version = "==4.7.0", build = "py39hf3d152e_4" }
openh264 = { version = "==2.3.1", build = "hcb278e6_2" }
openjpeg = { version = "==2.5.0", build = "hfec8fc6_2" }
openssl = { version = "==3.1.7", build = "hb9d3cd8_0" }
orc = { version = "==1.8.3", build = "hfdbbad2_0" }
overrides = { version = "==7.3.1", build = "pyhd8ed1ab_0" }
p11-kit = { version = "==0.24.1", build = "hc5aa10d_0" }
packaging = { version = "==23.1", build = "pyhd8ed1ab_0" }
pandas = { version = "==2.0.2", build = "py39h40cae4c_0" }
pandoc = { version = "==3.1.1", build = "h32600fe_0" }
pandocfilters = { version = "==1.5.0", build = "pyhd8ed1ab_0" }
panel = { version = "==1.1.1", build = "py_0" }
pango = { version = "==1.50.14", build = "heaa33ce_1" }
papermill = { version = "==2.3.4", build = "pyhd8ed1ab_0" }
param = { version = "==1.13.0", build = "py_0" }
parso = { version = "==0.8.3", build = "pyhd8ed1ab_0" }
partd = { version = "==1.4.0", build = "pyhd8ed1ab_0" }
pathspec = { version = "==0.11.1", build = "pyhd8ed1ab_0" }
patsy = { version = "==0.5.3", build = "pyhd8ed1ab_0" }
pcre2 = { version = "==10.40", build = "hc3806b6_0" }
pexpect = { version = "==4.8.0", build = "pyh1a96a4e_2" }
pickleshare = { version = "==0.7.5", build = "py_1003" }
pillow = { version = "==9.5.0", build = "py39haaeba84_1" }
pint = { version = "==0.21", build = "pyhd8ed1ab_0" }
pip = { version = "==23.1.2", build = "pyhd8ed1ab_0" }
pixman = { version = "==0.40.0", build = "h36c2ea0_0" }
pkgutil-resolve-name = { version = "==1.3.10", build = "pyhd8ed1ab_0" }
platformdirs = { version = "==3.5.1", build = "pyhd8ed1ab_0" }
ply = { version = "==3.11", build = "py_1" }
pooch = { version = "==1.7.0", build = "pyha770c72_3" }
proj = { version = "==9.2.0", build = "h8ffa02c_0" }
prometheus_client = { version = "==0.17.0", build = "pyhd8ed1ab_0" }
prompt-toolkit = { version = "==3.0.38", build = "pyha770c72_0" }
prompt_toolkit = { version = "==3.0.38", build = "hd8ed1ab_0" }
psutil = { version = "==5.9.5", build = "py39h72bdee0_0" }
pthread-stubs = { version = "==0.4", build = "h36c2ea0_1001" }
ptyprocess = { version = "==0.7.0", build = "pyhd3deb0d_0" }
pulseaudio-client = { version = "==16.1", build = "h5195f5e_3" }
pure_eval = { version = "==0.2.2", build = "pyhd8ed1ab_0" }
py-opencv = { version = "==4.7.0", build = "py39h22c7aae_4" }
pyarrow = { version = "==12.0.0", build = "py39he4327e9_3_cpu" }
pycodestyle = { version = "==2.10.0", build = "pyhd8ed1ab_0" }
pycparser = { version = "==2.21", build = "pyhd8ed1ab_0" }
pyct = { version = "==0.5.0", build = "py_0" }
pyct-core = { version = "==0.5.0", build = "py_0" }
pyflakes = { version = "==3.0.1", build = "pyhd8ed1ab_0" }
pygments = { version = "==2.15.1", build = "pyhd8ed1ab_0" }
pyparsing = { version = "==3.0.9", build = "pyhd8ed1ab_0" }
pyproj = { version = "==3.5.0", build = "py39h718ffca_1" }
pyqt = { version = "==5.15.7", build = "py39h5c7b992_3" }
pyqt5-sip = { version = "==12.11.0", build = "py39h227be39_3" }
pyrsistent = { version = "==0.19.3", build = "py39h72bdee0_0" }
pyshp = { version = "==2.3.1", build = "pyhd8ed1ab_0" }
pysocks = { version = "==1.7.1", build = "pyha2e5f31_6" }
pysteps = { version = "==1.7.1", build = "py39hb9d737c_1" }
python = { version = "==3.9.15", build = "hba424b6_0_cpython" }
python-cdo = { version = "==1.6.0", build = "pyhd8ed1ab_0" }
python-dateutil = { version = "==2.8.2", build = "pyhd8ed1ab_0" }
python-dotenv = { version = "==1.0.0", build = "pyhd8ed1ab_0" }
python-fastjsonschema = { version = "==2.17.1", build = "pyhd8ed1ab_0" }
python-json-logger = { version = "==2.0.7", build = "pyhd8ed1ab_0" }
python-tzdata = { version = "==2023.3", build = "pyhd8ed1ab_0" }
python-xxhash = { version = "==3.2.0", build = "py39h72bdee0_0" }
python_abi = { version = "==3.9", build = "3_cp39" }
pytz = { version = "==2023.3", build = "pyhd8ed1ab_0" }
pyviz_comms = { version = "==0.7.6", build = "py_0" }
pyyaml = { version = "==6.0", build = "py39hb9d737c_5" }
pyzmq = { version = "==25.0.2", build = "py39h0be026e_0" }
qt-main = { version = "==5.15.8", build = "h01ceb2d_12" }
qtconsole = { version = "==5.4.3", build = "pyhd8ed1ab_0" }
qtconsole-base = { version = "==5.4.3", build = "pyha770c72_0" }
qtpy = { version = "==2.3.1", build = "pyhd8ed1ab_0" }
rdma-core = { version = "==28.9", build = "h59595ed_1" }
re2 = { version = "==2023.3.2", build = "h8c504da_0" }
readline = { version = "==8.2", build = "h8228510_1" }
requests = { version = "==2.31.0", build = "pyhd8ed1ab_0" }
rfc3339-validator = { version = "==0.1.4", build = "pyhd8ed1ab_0" }
rfc3986-validator = { version = "==0.1.1", build = "pyh9f0ad1d_0" }
rich = { version = "==13.3.5", build = "pyhd8ed1ab_0" }
s2n = { version = "==1.3.44", build = "h06160fa_0" }
scikit-learn = { version = "==1.2.2", build = "py39hc236052_2" }
scipy = { version = "==1.13.1", build = "py39haf93ffa_0" }
seaborn = { version = "==0.12.2", build = "hd8ed1ab_0" }
seaborn-base = { version = "==0.12.2", build = "pyhd8ed1ab_0" }
send2trash = { version = "==1.8.2", build = "pyh41d4057_0" }
setuptools = { version = "==67.7.2", build = "pyhd8ed1ab_0" }
shapely = { version = "==2.0.1", build = "py39hf1c3bca_1" }
shellingham = { version = "==1.5.1", build = "pyhd8ed1ab_0" }
simplejson = { version = "==3.19.1", build = "py39h72bdee0_0" }
sip = { version = "==6.7.9", build = "py39h3d6467e_0" }
six = { version = "==1.16.0", build = "pyh6c4a22f_0" }
snappy = { version = "==1.1.10", build = "h9fff704_0" }
sniffio = { version = "==1.3.0", build = "pyhd8ed1ab_0" }
sortedcontainers = { version = "==2.4.0", build = "pyhd8ed1ab_0" }
soupsieve = { version = "==2.3.2.post1", build = "pyhd8ed1ab_0" }
sqlite = { version = "==3.42.0", build = "h2c6b66d_0" }
stack_data = { version = "==0.6.2", build = "pyhd8ed1ab_0" }
statsmodels = { version = "==0.14.0", build = "py39h0f8d45d_1" }
svt-av1 = { version = "==1.4.1", build = "hcb278e6_0" }
tblib = { version = "==1.7.0", build = "pyhd8ed1ab_0" }
tenacity = { version = "==8.2.2", build = "pyhd8ed1ab_0" }
terminado = { version = "==0.17.1", build = "pyh41d4057_0" }
textwrap3 = { version = "==0.9.2", build = "py_0" }
threadpoolctl = { version = "==3.1.0", build = "pyh8a188c0_0" }
tinycss2 = { version = "==1.2.1", build = "pyhd8ed1ab_0" }
tk = { version = "==8.6.12", build = "h27826a3_0" }
toml = { version = "==0.10.2", build = "pyhd8ed1ab_0" }
tomli = { version = "==2.0.1", build = "pyhd8ed1ab_0" }
toolz = { version = "==0.12.0", build = "pyhd8ed1ab_0" }
tornado = { version = "==6.3.2", build = "py39hd1e30aa_0" }
tqdm = { version = "==4.65.0", build = "pyhd8ed1ab_1" }
traitlets = { version = "==5.9.0", build = "pyhd8ed1ab_0" }
typer = { version = "==0.9.0", build = "pyhd8ed1ab_0" }
typing-extensions = { version = "==4.6.2", build = "hd8ed1ab_0" }
typing_extensions = { version = "==4.6.2", build = "pyha770c72_0" }
typing_utils = { version = "==0.1.0", build = "pyhd8ed1ab_0" }
tzdata = { version = "==2023c", build = "h71feb2d_0" }
uc-micro-py = { version = "==1.0.1", build = "pyhd8ed1ab_0" }
ucx = { version = "==1.14.1", build = "hf587318_1" }
udunits2 = { version = "==2.2.28", build = "hc3e0081_0" }
unicodedata2 = { version = "==15.0.0", build = "py39hb9d737c_0" }
urllib3 = { version = "==2.0.2", build = "pyhd8ed1ab_0" }
wcwidth = { version = "==0.2.6", build = "pyhd8ed1ab_0" }
webencodings = { version = "==0.5.1", build = "py_1" }
websocket-client = { version = "==1.5.2", build = "pyhd8ed1ab_0" }
wheel = { version = "==0.40.0", build = "pyhd8ed1ab_0" }
widgetsnbextension = { version = "==4.0.7", build = "pyhd8ed1ab_0" }
x264 = { version = "==1!164.3095", build = "h166bdaf_2" }
x265 = { version = "==3.5", build = "h924138e_3" }
xarray = { version = "==2023.5.0", build = "pyhd8ed1ab_0" }
xcb-util = { version = "==0.4.0", build = "hd590300_1" }
xcb-util-image = { version = "==0.4.0", build = "h8ee46fc_1" }
xcb-util-keysyms = { version = "==0.4.0", build = "h8ee46fc_1" }
xcb-util-renderutil = { version = "==0.3.9", build = "hd590300_1" }
xcb-util-wm = { version = "==0.4.1", build = "h8ee46fc_1" }
xkeyboard-config = { version = "==2.38", build = "h0b41bf4_0" }
xorg-fixesproto = { version = "==5.0", build = "h7f98852_1002" }
xorg-inputproto = { version = "==2.3.2", build = "h7f98852_1002" }
xorg-kbproto = { version = "==1.0.7", build = "h7f98852_1002" }
xorg-libice = { version = "==1.0.10", build = "h7f98852_0" }
xorg-libsm = { version = "==1.2.3", build = "hd9c2040_1000" }
xorg-libx11 = { version = "==1.8.4", build = "h8ee46fc_1" }
xorg-libxau = { version = "==1.0.11", build = "hd590300_0" }
xorg-libxdmcp = { version = "==1.1.3", build = "h7f98852_0" }
xorg-libxext = { version = "==1.3.4", build = "h0b41bf4_2" }
xorg-libxfixes = { version = "==5.0.3", build = "h7f98852_1004" }
xorg-libxi = { version = "==1.7.10", build = "h7f98852_0" }
xorg-libxrender = { version = "==0.9.10", build = "h7f98852_1003" }
xorg-renderproto = { version = "==0.11.1", build = "h7f98852_1002" }
xorg-xextproto = { version = "==7.3.0", build = "h0b41bf4_1003" }
xorg-xf86vidmodeproto = { version = "==2.3.1", build = "h7f98852_1002" }
xorg-xproto = { version = "==7.0.31", build = "h7f98852_1007" }
xxhash = { version = "==0.8.1", build = "h0b41bf4_0" }
xyzservices = { version = "==2023.5.0", build = "pyhd8ed1ab_1" }
xz = { version = "==5.2.6", build = "h166bdaf_0" }
yaml = { version = "==0.2.5", build = "h7f98852_2" }
zeromq = { version = "==4.3.4", build = "h9c3ff4c_1" }
zict = { version = "==3.0.0", build = "pyhd8ed1ab_0" }
zipp = { version = "==3.15.0", build = "pyhd8ed1ab_0" }
zlib = { version = "==1.2.13", build = "h166bdaf_4" }
zstd = { version = "==1.5.2", build = "h3eb15da_6" }

[tool.pixi.pypi-dependencies]
mlde_analysis = { path = ".", editable = true }
astunparse = "==1.6.3"
cf-xarray = "==0.9.4"
cfgv = "==3.3.1"
cmcrameri = "==1.9"
cmweather = "==0.3.2"
compliance-checker = "==5.1.1"
distlib = "==0.3.6"
exceptiongroup = "==1.1.1"
execnb = "==0.1.5"
fastcore = "==1.5.29"
filelock = "==3.12.0"
ghapi = "==1.0.3"
identify = "==2.5.24"
ipympl = "==0.9.7"
isodate = "==0.7.2"
lxml = "==5.3.0"
mlde-utils = "==0.2.2"
nbdev = "==2.2.10"
#netcdf4 = "==1.7.2"
nodeenv = "==1.8.0"
owslib = "==0.31.0"
pendulum = "==3.0.0"
pluggy = "==1.0.0"
pre-commit = "==3.3.2"
properscoring = "==0.1"
pygeoif = "==1.5.1"
pytest = "==7.3.1"
python-cmethods = "==1.0.1"
regex = "==2024.11.6"
time-machine = "==2.16.0"
validators = "==0.34.0"
virtualenv = "==20.23.0"
xhistogram = "==0.3.2"
xskillscore = "==0.0.24"


[tool.black]
extend-exclude = '^/nbs/'
