[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlde_analysis"
version = "0.5.0"
authors = [
  { name="Henry Addison", email="henry.addison@bristol.ac.uk" },
]
description = "A package for notebooks evaluating approaches to emulate a CPM and downscale precipitation"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "cf-xarray",
  "cmcrameri",
  "cmweather",
  "ipympl",
  "mlde-utils==v0.3.0a8",
  "nbdev",
  #"netcdf4==1.7.2",
  "pre-commit",
  "properscoring",
  "python-cmethods",
  "xhistogram",
  "xskillscore",
]

[dependency-groups]
test = ["pytest", "pytest-env"]
dev = [{include-group = "test"}]

[project.urls]
"Homepage" = "https://github.com/henryaddison/mlde-analysis"
"Bug Tracker" = "https://github.com/henryaddison/mlde-analysis/issues"

[project.scripts]
    mlde-analysis = "mlde_analysis.bin:app"

[tool.pixi.workspace]
channels = ["conda-forge", "nodefaults"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
# Create a custom environment which only has the `lint` feature
# lint = {features = ["lint"], no-default-feature = true}


[tool.pixi.dependencies]
black = { version = "~=25.1.0" }
bottleneck = { version = "*" }
dask = { version = "*" }
flake8 = { version = "==6.0.0" }
iris = { version = "*" }
jupyterlab = { version = "*" }
metpy = { version = "*" }
nc-time-axis = { version = "==1.4.1" }
numpy = { version = "*" }
papermill = { version = "*" }
pint = { version = "*" }
pysteps = { version = "*" }
python = { version = "~=3.12.0" }
python-cdo = { version = "*" }
python-dotenv = { version = "*" }
scikit-learn = { version = "*" }
scipy = { version = "*" }
seaborn = { version = "*" }
typer = { version = "*" }
xarray = { version = "*" }

[tool.pixi.pypi-dependencies]
mlde_analysis = { path = ".", editable = true }

[tool.pixi.feature.dev.tasks]
test = "pytest"
lint = "black .; flake8 ."

[tool.black]
extend-exclude = '^/nbs/'
target-version = ["py312"]

[tool.pytest_env]
DERIVED_DATA="/path/to/data/derived"
WORKDIRS_PATH="/path/to/test/workdirs"
